--- a/tailwind.config
+++ b/tailwind.config
@@ -1,19 +1,17 @@
 /** @type {import('tailwindcss').Config} */
 module.exports = {
-  content: ["./public/**/*.{html,js}"], // Scan HTML and JS files in public/
+  content: ["./public/**/*.{html,js}"],
   theme: {
     extend: {
       colors: {
-        // Custom dark theme colors inspired by Cursor.io aesthetic
-        'primary-dark': '#1a1d21', // Very dark background
-        'secondary-dark': '#2c313a', // Slightly lighter background for elements
-        'tertiary-dark': '#3a4049', // Borders, subtle dividers
-        'primary-accent': '#4f85e5', // A modern blue accent
-        'primary-text': '#e0e0e0', // Main text color
-        'secondary-text': '#a0a0a0', // Dimmer text color
+        'primary-dark': '#1a1d21', 
+        'secondary-dark': '#2c313a',
+        'tertiary-dark': '#3a4049', 
+        'primary-accent': '#4f85e5', 
+        'primary-text': '#e0e0e0', 
+        'secondary-text': '#a0a0a0', 
       },
       fontFamily: {
-        // Use system fonts for a clean look
         sans: ['Inter', '-apple-system', 'BlinkMacSystemFont', '"Segoe UI"', 'Roboto', '"Helvetica Neue"', 'Arial', '"Noto Sans"', 'sans-serif', '"Apple Color Emoji"', '"Segoe UI Emoji"', '"Segoe UI Symbol"', '"Noto Color Emoji"'],
       },
     },
