--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Client-side WebTorrent streaming app with a minimal dark UI.",
     "main": "public/script.js",
     "scripts": {
-    "dev": "tailwindcss -i ./src/input.css -o ./public/style.css --watch",
+    "dev": "tailwindcss -i ./public/input.css -o ./public/style.css --watch",
     "build": "NODE_ENV=production tailwindcss -i ./src/input.css -o ./public/style.css --minify",
     "test": "vitest run"
     },
