--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "public/script.js",
     "scripts": {
     "dev": "tailwindcss -i ./public/input.css -o ./public/style.css --watch",
-    "build": "NODE_ENV=production tailwindcss -i ./src/input.css -o ./public/style.css --minify",
+    "build": "NODE_ENV=production tailwindcss -i ./public/input.css -o ./public/style.css --minify",
     "test": "vitest run"
     },
     "keywords": [
